--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/server": "^4.7.2",
     "bcrypt": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "stripe": "^11.4.0",
     "apollo-server-express": "^3.11.1",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
-    "mongoose": "^6.8.1"
+    "mongoose": "^7.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
