--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "vitest": "^0.32.0"
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,16 +42,12 @@
     ]
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "vite": "^4.3.9"
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "engines": {
     "npm": "7.x"
